@@ -152,7 +152,7 @@ dbInsertDataFrame <- function(conn, tablename, data, col2type, verbose=FALSE){
   sql_template <- paste("INSERT INTO ", tablename, " VALUES (", values_template, ")", sep="")
   if (verbose)
     simpleMessage("Inserting ", nrow(data), " rows into table ", tablename, "... ")
-  dbBeginTransaction(conn)
+  dbBegin(conn)
   on.exit(dbCommit(conn))
   dbGetPreparedQuery(conn, sql_template, bind.data=data)
   if (verbose) msgOK()
