@@ -5,10 +5,10 @@ Version: @VERSION@
 Author: @AUTHOR@
 Maintainer: @AUTHOR@ <@AUTHOREMAIL@>
 LazyLoad: yes
-Depends: R (>= 2.15.0),
+Depends: R (>= 3.1.0),
 	 Biostrings (>= 2.25.12),
          methods,
-         RSQLite (>= 0.11.1),
+         RSQLite (>= 1.0.0),
          oligoClasses (>= 1.19.41),
          oligo (>= 1.21.5),
          DBI
